--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,12 +6,12 @@ sonar.organization=isdi-coders-2023
 #sonar.projectVersion=1.0
 
 
-
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./src
 
-
+# Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
-sonar.test.inclusions=src/**/*.test.ts
-sonar.coverage.exclusions=**/types.ts, **/*.d.ts,
+sonar.test.inclusions=src/**/*.test.ts, src/**/*.test.tsx
+sonar.coverage.exclusions=**/types.ts, **/*.d.ts, src/setupTests.ts, src/index.ts, src/database/index.ts, 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
