--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.2",
     "@commitlint/config-conventional": "^18.4.2",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@types/cors": "^2.8.17",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
@@ -27,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "chalk": "^4.1.2",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "eslint": "^8.53.0",
@@ -35,15 +38,16 @@
     "eslint-config-xo-typescript": "^1.0.1",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
+    "jest-ts-webcompat-resolver": "^1.0.0",
     "lint-staged": "^15.1.0",
     "morgan": "^1.10.0",
     "prettier": "^3.1.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2",
-    "@types/cors": "^2.8.17",
-    "cors": "^2.8.5"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/supertest": "^2.0.16",
     "express": "^4.18.2",
     "mongoose": "^8.0.1"
   }
