--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@types/supertest": "^2.0.16",
     "express": "^4.18.2",
+    "mongodb-memory-server-core": "^9.1.1",
     "mongoose": "^8.0.1"
   }
 }
