--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectKey=isdi-coders-2023_Barbara-Gimeno-Final-Project-back-202309-bcn
 sonar.organization=isdi-coders-2023
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=Barbara-Gimeno-Final-Project-back-202309-bcn
-#sonar.projectVersion=1.0
+This is the name and version displayed in the SonarCloud UI.
+sonar.projectName=Barbara-Gimeno-Final-Project-back-202309-bcn
+sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
@@ -13,5 +13,5 @@ sonar.sources=./src
 sonar.sourceEncoding=UTF-8
 
 sonar.test.inclusions=src/**/*.test.ts, src/**/*.test.tsx
-sonar.coverage.exclusions=**/types.ts, **/*.d.ts, src/setupTests.ts, src/index.ts, src/database/index.ts, src/server/app.ts, src/server/index.ts, src/setupTests.ts
+sonar.coverage.exclusions=**/types.ts, **/*.d.ts, src/setupTests.ts, src/index.ts, src/database/index.ts, src/server/app.ts, src/server/index.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
