--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,6 +13,5 @@ sonar.sources=./src
 sonar.sourceEncoding=UTF-8
 
 sonar.test.inclusions=src/**/*.test.ts, src/**/*.test.tsx
-sonar.coverage.exclusions=**/types.ts, **/*.d.ts, src/setupTests.ts, src/index.ts,
- src/database/index.ts, src/server/app.ts
+sonar.coverage.exclusions=**/types.ts, **/*.d.ts, src/setupTests.ts, src/index.ts, src/database/index.ts, src/server/app.ts, src/server/index.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
